--- a/adaptation.html
+++ b/adaptation.html
@@ -93,63 +93,92 @@
     <!--header section end-->
 
     <section id="service " class="services-section js-sticky-menu">
-        <h2 style="color: brown;">Tiger Tales: Deciphering the Enigmatic Behavior of Big Cats</h2>
+        <h2>Survival Instincts: Adaptive Behaviors for Challenges</h2>
 
     </section>
 
     <section class="team-section " id="team">
-        <div class="  s-container">
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Roar and Rumble: Insights into Tiger Behavior"</h2>
-                    <p class="little-description">Explore the intricate world of tiger behavior, from their distinctive vocalizations to social interactions and territorial displays. Uncover the nuances that define the behavior of these magnificent big cats
-                    </p>
-                </div>
+        <div class="row  s-container">
+            <div class="h-item">
+                <p class="little-description">The intricate stripes of a tiger's coat serve as a natural camouflage, allowing them to blend seamlessly into their surroundings. This adaptation is essential for stealthy hunting and ambushing prey.
+                </p>
             </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"The Secret Lives of Tigers: A Behavioral Exploration"</h2>
-                    <p class="little-description">Delve into the hidden aspects of tiger behavior, from solitary prowling to playful antics. Witness the various behavioral patterns that make tigers both elusive and captivating in their natural habitats.
-                    </p>
-                </div>
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Stalking Shadows: Understanding Tiger Behavioral Ecology"</h2>
-                    <p class="little-description">Journey into the shadows where tigers roam, stalking prey with unparalleled grace. Discover the behavioral adaptations that allow these apex predators to thrive in diverse ecosystems.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Beyond the Stripes: A Close Look at Tiger Conduct"</h2>
-                    <p class="little-description">Peer beyond the iconic stripes and delve into the behavioral complexities of tigers. Unravel the mysteries of their communication, hunting strategies, and the intricate dance of interactions within their territories.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Tales from the Tiger's Den: Behavior Unmasked"</h2>
-                    <p class="little-description">Unmask the behaviors that define the daily lives of tigers. From nurturing cubs to establishing dominance, this section unveils the stories written in the footprints of these enigmatic felines.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Wild Ballet: The Dance of Tiger Behavior"</h2>
-                    <p class="little-description">Witness the untamed ballet of tiger behavior, where every movement tells a story. Explore the grace, agility, and instincts that shape the behavioral dynamics of these magnificent creatures.
-                    </p>
-                </div>
-
+            <div class="h-item">
+                <h2>Camouflage Mastery</h2>
             </div>
 
 
         </div>
     </section>
 
+
+    <section id="service " class="services-section light-blue js-sticky-menu">
+        <div class="row  s-container">
+            <div class="h-item">
+                <h2>Prowess in Paw and Claw</h2>
+            </div>
+            <div class="h-item">
+                <p class="little-description ">Tigers possess adaptations in their paws and claws that make them silent and deadly predators. Their padded paws and sharp retractable claws aid in silent stalking, providing a tactical advantage in the hunt.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="team-section " id="team">
+        <div class="row  s-container">
+            <div class="h-item">
+
+                <p class="little-description"> Tigers boast exceptional night vision, a crucial adaptation for their nocturnal lifestyle. This adaptation enhances their ability to navigate and hunt during the low-light conditions of the night.
+                </p>
+            </div>
+            <div class="h-item">
+                <h2> Nocturnal Navigators</h2>
+            </div>
+
+
+        </div>
+    </section>
+
+
+    <section id="service " class="services-section light-blue js-sticky-menu">
+        <div class="row  s-container">
+            <div class="h-item">
+                <h2>Swimming Adaptations</h2>
+            </div>
+            <div class="h-item">
+                <p class="little-description ">Certain tiger species showcase remarkable adaptations for an aquatic lifestyle. From partially webbed toes to a love for water, these adaptations make them proficient swimmers, enabling them to traverse water channels.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="team-section " id="team">
+        <div class="row  s-container">
+            <div class="h-item">
+
+                <p class="little-description">Tigers employ unique adaptations for territory management, including scent marking and vocalizations. These behaviors play a crucial role in establishing and defending territories in the wild.
+                </p>
+            </div>
+            <div class="h-item">
+                <h2>Scent Marking and Vocalizations</h2>
+            </div>
+
+
+        </div>
+    </section>
+
+
+    <section id="service " class="services-section light-blue js-sticky-menu">
+        <div class="row  s-container">
+            <div class="h-item">
+                <h2>Adaptive Behaviors</h2>
+            </div>
+            <div class="h-item">
+                <p class="little-description ">Tigers exhibit a range of adaptive behaviors as survival strategies. From strategic hunting techniques to social behaviors, these adaptations showcase the tiger's resilience and ability to thrive in diverse environments.
+                </p>
+            </div>
+        </div>
+    </section>
     <!--footer section start-->
     <footer class="footer-section">
         <div class="row">
@@ -157,11 +186,7 @@
         </div>
     </footer>
     <!--footer section end-->
-    <!--  -->
-    <audio id="audioPlayer">
-        <source src="./audio/tiger-roar.flac" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
+
 
     <!-- JS SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
