--- a/fun-fact.html
+++ b/fun-fact.html
@@ -93,7 +93,7 @@
     <!--header section end-->
 
     <section id="service " class="services-section js-sticky-menu">
-        <h2 style="color: brown;">Tiger Tales: Deciphering the Enigmatic Behavior of Big Cats</h2>
+        <h2 style="color: brown;">Fascinating Tiger Trivia</h2>
 
     </section>
 
@@ -101,51 +101,59 @@
         <div class="  s-container">
             <div class="b-item">
                 <div class="inner">
-                    <h2>"Roar and Rumble: Insights into Tiger Behavior"</h2>
-                    <p class="little-description">Explore the intricate world of tiger behavior, from their distinctive vocalizations to social interactions and territorial displays. Uncover the nuances that define the behavior of these magnificent big cats
-                    </p>
+                    <h2 style="color: rgb(129, 194, 219);">Diverse Species</h2>
+                    <p class="little-description" style="text-align: justify;">Tigers belong to the genus Panthera and are the largest cat species. There are six living subspecies, including the Bengal, Indochinese, Malayan, Siberian, South China, and Sumatran tigers.</p>
                 </div>
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"The Secret Lives of Tigers: A Behavioral Exploration"</h2>
-                    <p class="little-description">Delve into the hidden aspects of tiger behavior, from solitary prowling to playful antics. Witness the various behavioral patterns that make tigers both elusive and captivating in their natural habitats.
-                    </p>
-                </div>
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Stalking Shadows: Understanding Tiger Behavioral Ecology"</h2>
-                    <p class="little-description">Journey into the shadows where tigers roam, stalking prey with unparalleled grace. Discover the behavioral adaptations that allow these apex predators to thrive in diverse ecosystems.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Beyond the Stripes: A Close Look at Tiger Conduct"</h2>
-                    <p class="little-description">Peer beyond the iconic stripes and delve into the behavioral complexities of tigers. Unravel the mysteries of their communication, hunting strategies, and the intricate dance of interactions within their territories.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Tales from the Tiger's Den: Behavior Unmasked"</h2>
-                    <p class="little-description">Unmask the behaviors that define the daily lives of tigers. From nurturing cubs to establishing dominance, this section unveils the stories written in the footprints of these enigmatic felines.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Wild Ballet: The Dance of Tiger Behavior"</h2>
-                    <p class="little-description">Witness the untamed ballet of tiger behavior, where every movement tells a story. Explore the grace, agility, and instincts that shape the behavioral dynamics of these magnificent creatures.
-                    </p>
-                </div>
-
             </div>
 
+            <div class="b-item">
+                <div class="inner">
+                    <h2 style="color: rgb(129, 194, 219);">Distinctive Stripes</h2>
+                    <p class="little-description" style="text-align: justify;">Each tiger's stripe pattern is unique, similar to human fingerprints. The stripes not only provide camouflage in their natural habitats but also make them easily identifiable.</p>
+                </div>
+            </div>
+
+            <div class="b-item">
+                <div class="inner">
+                    <h2 style="color: rgb(129, 194, 219);">Powerful Swimmers</h2>
+                    <p class="little-description" style="text-align: justify;">Unlike most cats, tigers are excellent swimmers and enjoy being in the water. They often cool off by taking a dip and are known to traverse rivers with ease.</p>
+                </div>
+            </div>
+
+            <div class="b-item">
+                <div class="inner">
+                    <h2 style="color: rgb(129, 194, 219);">Night Stalkers</h2>
+                    <p class="little-description" style="text-align: justify;">Tigers are crepuscular hunters, meaning they are most active during dawn and dusk. Their exceptional night vision and keen senses make them skilled nocturnal predators.</p>
+                </div>
+            </div>
+
+            <div class="b-item">
+                <div class="inner">
+                    <h2 style="color: rgb(129, 194, 219);">Strong Bite</h2>
+                    <p class="little-description" style="text-align: justify;">Tigers have one of the most powerful bites among big cats. Their sharp canines and strong jaws allow them to deliver a bite force that can crush bones and tackle large prey.</p>
+                </div>
+            </div>
+
+            <div class="b-item">
+                <div class="inner">
+                    <h2 style="color: rgb(129, 194, 219);">Territorial Behavior</h2>
+                    <p class="little-description" style="text-align: justify;">Tigers are highly territorial animals and mark their territory with scent markings, scratches, and vocalizations. Each tiger's territory can range from 10 to 100 square miles, depending on the availability of prey.</p>
+                </div>
+            </div>
+
+            <div class="b-item">
+                <div class="inner">
+                    <h2 style="color: rgb(129, 194, 219);">Roaring Giants</h2>
+                    <p class="little-description" style="text-align: justify;">Tigers are known for their distinctive roars, which can be heard up to 2 miles away. Roaring serves various purposes, including communication between individuals and establishing territory.</p>
+                </div>
+            </div>
+
+            <div class="b-item">
+                <div class="inner">
+                    <h2 style="color: rgb(129, 194, 219);">Endangered Status</h2>
+                    <p class="little-description" style="text-align: justify;">Despite being apex predators, all tiger species are currently endangered due to habitat loss, poaching, and conflicts with humans. Conservation efforts are crucial to ensuring the survival of these magnificent big cats.</p>
+                </div>
+            </div>
 
         </div>
     </section>
@@ -157,11 +165,7 @@
         </div>
     </footer>
     <!--footer section end-->
-    <!--  -->
-    <audio id="audioPlayer">
-        <source src="./audio/tiger-roar.flac" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
+
 
     <!-- JS SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
