--- a/gallery.html
+++ b/gallery.html
@@ -93,82 +93,43 @@
     <!--header section end-->
 
     <section id="service " class="services-section js-sticky-menu">
-        <h2 style="color: brown;">Tiger Tales: Deciphering the Enigmatic Behavior of Big Cats</h2>
+        <div class="row ">
+            <div class="">
 
+                <h2>Roaring Beauty: A Captivating Tiger Gallery</h2>
+
+            </div>
+        </div>
     </section>
 
-    <section class="team-section " id="team">
-        <div class="  s-container">
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Roar and Rumble: Insights into Tiger Behavior"</h2>
-                    <p class="little-description">Explore the intricate world of tiger behavior, from their distinctive vocalizations to social interactions and territorial displays. Uncover the nuances that define the behavior of these magnificent big cats
-                    </p>
-                </div>
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"The Secret Lives of Tigers: A Behavioral Exploration"</h2>
-                    <p class="little-description">Delve into the hidden aspects of tiger behavior, from solitary prowling to playful antics. Witness the various behavioral patterns that make tigers both elusive and captivating in their natural habitats.
-                    </p>
-                </div>
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Stalking Shadows: Understanding Tiger Behavioral Ecology"</h2>
-                    <p class="little-description">Journey into the shadows where tigers roam, stalking prey with unparalleled grace. Discover the behavioral adaptations that allow these apex predators to thrive in diverse ecosystems.
-                    </p>
-                </div>
 
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Beyond the Stripes: A Close Look at Tiger Conduct"</h2>
-                    <p class="little-description">Peer beyond the iconic stripes and delve into the behavioral complexities of tigers. Unravel the mysteries of their communication, hunting strategies, and the intricate dance of interactions within their territories.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Tales from the Tiger's Den: Behavior Unmasked"</h2>
-                    <p class="little-description">Unmask the behaviors that define the daily lives of tigers. From nurturing cubs to establishing dominance, this section unveils the stories written in the footprints of these enigmatic felines.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Wild Ballet: The Dance of Tiger Behavior"</h2>
-                    <p class="little-description">Witness the untamed ballet of tiger behavior, where every movement tells a story. Explore the grace, agility, and instincts that shape the behavioral dynamics of these magnificent creatures.
-                    </p>
-                </div>
-
-            </div>
-
-
-        </div>
+    <section class="g-div">
+        <div><img class="height" src="images/btiger.jpg" alt="Image 1"></div>
+        <div><img class="height" src="images/ctiger.jpg" alt="Image 1"></div>
+        <div><img class="height" src="images/stiger.jpg" alt="Image 1"></div>
+        <div><img class="height" src="images/sttiger.jpg" alt="Image 1"></div>
+        <div><img class="height" src="images/mtiger.jpg" alt="Image 1"></div>
+        <div><img class="height" src="images/life-1.jpg" alt="Image 1"></div>
+        <div><img class="height" src="images/life-2.jpg" alt="Image 1"></div>
+        <div><img class="height" src="images/life-3.jpg" alt="Image 1"></div>
+        <div><img class="height" src="images/life-4.jpg" alt="Image 1"></div>
     </section>
 
     <!--footer section start-->
-    <footer class="footer-section">
-        <div class="row">
-            <h4 style="color: white;">&copy All Rights Reserved <span style="color: black;">|</span> Tova D</h4>
+    <footer class="footer-section ">
+        <div class="row ">
+            <h4 style="color: white; ">&copy All Rights Reserved <span style="color: black; ">|</span> Tova D</h4>
         </div>
     </footer>
     <!--footer section end-->
-    <!--  -->
-    <audio id="audioPlayer">
-        <source src="./audio/tiger-roar.flac" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
+
 
     <!-- JS SCRIPTS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./scripts/jquery.waypoints.min.js"></script>
-    <script src="./scripts/animated-circle.js"></script>
-    <script src="./scripts/mixitup.min.js"></script>
-    <script src="./scripts/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
+    <script src="./scripts/jquery.waypoints.min.js "></script>
+    <script src="./scripts/animated-circle.js "></script>
+    <script src="./scripts/mixitup.min.js "></script>
+    <script src="./scripts/main.js "></script>
 
 
 </body>
