--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Cuda - An awesome single page portfolio html template</title>
+    <title>Tiger - an untold story !</title>
+    <meta name="description" content="Explore the world of tigers with fascinating facts about their behavior, habitat, and more.">
+    <meta name="keywords" content="tigers, big cats, wildlife, conservation, tiger facts">
+    <meta name="author" content="Tova D">
+
+    <!-- Open Graph Meta Tags (for social media sharing) -->
+    <meta property="og:title" content="Tiger Kingdom">
+    <meta property="og:description" content="Discover the majestic world of tigers through captivating facts and information.">
+
+    <!-- Twitter Meta Tags (for Twitter card) -->
+    <meta name="twitter:title" content="Tiger Kingdom">
+    <meta name="twitter:description" content="Explore the world of tigers with captivating facts and information.">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
@@ -44,7 +55,7 @@
                         <a href="adaptation.html">Adaptations</a>
                     </li>
                     <li class="nav-item">
-                        <a href="conservation.html">Conservation</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a href="fun-fact.html">Fun Facts</a>
@@ -67,7 +78,7 @@
                             <a onclick="closeNav()" href="behavior.html">Behavior</a>
                             <a onclick="closeNav()" href="life-cycle.html">Life cycle</a>
                             <a onclick="closeNav()" href="adaptation.html">Adaptations</a>
-                            <a onclick="closeNav()" href="conservation.html">Conservation</a>
+                            <a onclick="closeNav()" href="gallery.html">Gallery</a>
                             <a onclick="closeNav()" href="fun-fact.html">Fun Facts</a>
                             <a onclick="closeNav()" href="about-me.html">About Me</a>
                             <a onclick="closeNav()" href="contact.html">Contact</a>
@@ -89,7 +100,19 @@
     </header>
     <!--header section end-->
 
-    <!--portfolio section start-->
+    <section class="team-section " id="team">
+        <div class="row">
+            <h2>Tiger 101 by National Geography</h2>
+        </div>
+        <div class="row">
+            <div class="youtube-link">
+                <iframe width="80%" height="350" src="https://www.youtube.com/embed/FK3dav4bA4s?si=CXaupHMZkVOFZ2Bp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+
     <section class="portfolio-section" id="portfolio">
         <div class="row">
             <h2>Subspecies of Tiger</h2>
@@ -139,7 +162,6 @@
         </div>
 
     </section>
-    <!--team section start-->
     <section class="team-section " id="team">
         <div class="row">
             <h2>Get Involved in Conservation</h2>
@@ -158,7 +180,7 @@
             </div>
         </div>
     </section>
-    <!--team section end-->
+
 
     <!--footer section start-->
     <footer class="footer-section">
@@ -166,7 +188,9 @@
             <h4 style="color: white;">&copy All Rights Reserved <span style="color: black;">|</span> Tova D</h4>
         </div>
     </footer>
+
     <!--footer section end-->
+
 
     <!-- JS SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
