--- a/about-me.html
+++ b/about-me.html
@@ -92,76 +92,36 @@
     </header>
     <!--header section end-->
 
-    <section id="service " class="services-section js-sticky-menu">
-        <h2 style="color: brown;">Tiger Tales: Deciphering the Enigmatic Behavior of Big Cats</h2>
-
-    </section>
-
-    <section class="team-section " id="team">
-        <div class="  s-container">
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Roar and Rumble: Insights into Tiger Behavior"</h2>
-                    <p class="little-description">Explore the intricate world of tiger behavior, from their distinctive vocalizations to social interactions and territorial displays. Uncover the nuances that define the behavior of these magnificent big cats
-                    </p>
+    <div class="whole">
+        <section class="team-section " id="team">
+            <div class="row">
+                <h2>About me</h2>
+                <p class="little-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit error amet doloremque cumque assumenda minima recusandae tempora fugit ea id. Tenetur explicabo ad iure possimus quia quaerat nostrum dolorem quae!
+                </p>
+            </div>
+            <div class="row">
+                <div class="social-link">
+                    <ul>
+                        <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href=""><i class="far fa-envelope"></i></a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"The Secret Lives of Tigers: A Behavioral Exploration"</h2>
-                    <p class="little-description">Delve into the hidden aspects of tiger behavior, from solitary prowling to playful antics. Witness the various behavioral patterns that make tigers both elusive and captivating in their natural habitats.
-                    </p>
-                </div>
+        </section>
+
+
+
+        <!--footer section start-->
+        <footer class="footer-section">
+            <div class="row">
+                <h4 style="color: white;">&copy All Rights Reserved <span style="color: black;">|</span> Tova D</h4>
             </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Stalking Shadows: Understanding Tiger Behavioral Ecology"</h2>
-                    <p class="little-description">Journey into the shadows where tigers roam, stalking prey with unparalleled grace. Discover the behavioral adaptations that allow these apex predators to thrive in diverse ecosystems.
-                    </p>
-                </div>
+        </footer>
+        <!--footer section end-->
 
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Beyond the Stripes: A Close Look at Tiger Conduct"</h2>
-                    <p class="little-description">Peer beyond the iconic stripes and delve into the behavioral complexities of tigers. Unravel the mysteries of their communication, hunting strategies, and the intricate dance of interactions within their territories.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Tales from the Tiger's Den: Behavior Unmasked"</h2>
-                    <p class="little-description">Unmask the behaviors that define the daily lives of tigers. From nurturing cubs to establishing dominance, this section unveils the stories written in the footprints of these enigmatic felines.
-                    </p>
-                </div>
-
-            </div>
-            <div class="b-item">
-                <div class="inner">
-                    <h2>"Wild Ballet: The Dance of Tiger Behavior"</h2>
-                    <p class="little-description">Witness the untamed ballet of tiger behavior, where every movement tells a story. Explore the grace, agility, and instincts that shape the behavioral dynamics of these magnificent creatures.
-                    </p>
-                </div>
-
-            </div>
-
-
-        </div>
-    </section>
-
-    <!--footer section start-->
-    <footer class="footer-section">
-        <div class="row">
-            <h4 style="color: white;">&copy All Rights Reserved <span style="color: black;">|</span> Tova D</h4>
-        </div>
-    </footer>
-    <!--footer section end-->
-    <!--  -->
-    <audio id="audioPlayer">
-        <source src="./audio/tiger-roar.flac" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
+    </div>
 
     <!-- JS SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
