--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Cuda - An awesome single page portfolio html template</title>
+    <title>Tiger - an untold story !</title>
+    <meta name="description" content="Explore the world of tigers with fascinating facts about their behavior, habitat, and more.">
+    <meta name="keywords" content="tigers, big cats, wildlife, conservation, tiger facts">
+    <meta name="author" content="Tova D">
+
+    <!-- Open Graph Meta Tags (for social media sharing) -->
+    <meta property="og:title" content="Tiger Kingdom">
+    <meta property="og:description" content="Discover the majestic world of tigers through captivating facts and information.">
+
+    <!-- Twitter Meta Tags (for Twitter card) -->
+    <meta name="twitter:title" content="Tiger Kingdom">
+    <meta name="twitter:description" content="Explore the world of tigers with captivating facts and information.">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
@@ -23,37 +34,37 @@
     <header id="home">
         <nav>
             <div class="row">
-                <a class="logo" href="#home"><img src="./images/logo.png" alt="Butterfly"></a>
+                <a class="logo" href="index.html"><img src="./images/logo.png" alt="Butterfly"></a>
                 <ul class="main-nav">
                     <li class="">
                         <a href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Origin</a>
+                        <a href="habitant.html">Habitant</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Types</a>
+                        <a href="diet.html">Diet</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Myths</a>
+                        <a href="behavior.html">Behavior</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Foods</a>
+                        <a href="life-cycle.html">Life cycle</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Inhabitants</a>
+                        <a href="adaptation.html">Adaptations</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Characteristics</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Gallery</a>
+                        <a href="fun-fact.html">Fun Facts</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">About Me</a>
+                        <a href="about-me.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <div class="mobile-menu">
@@ -61,31 +72,34 @@
                     <div class="overlay" id="myNav">
                         <a href="javascript:void(0)" onclick="closeNav()" class="close-btn">&times</a>
                         <div class="overlay-content">
-                            <a onclick="closeNav()" href="#home">home</a>
-                            <a onclick="closeNav()" href="#service">service</a>
-                            <a onclick="closeNav()" href="#team">Team</a>
-                            <a onclick="closeNav()" href="#skill">Skill</a>
-                            <a onclick="closeNav()" href="#portfolio">portfolio</a>
-                            <a onclick="closeNav()" href="#testimonial">testimonial</a>
-                            <a onclick="closeNav()" href="#contact">contact</a>
+                            <a onclick="closeNav()" href="index.html">Home</a>
+                            <a onclick="closeNav()" href="habitant.html">Habitant</a>
+                            <a onclick="closeNav()" href="diet.html">Diet</a>
+                            <a onclick="closeNav()" href="behavior.html">Behavior</a>
+                            <a onclick="closeNav()" href="life-cycle.html">Life cycle</a>
+                            <a onclick="closeNav()" href="adaptation.html">Adaptations</a>
+                            <a onclick="closeNav()" href="gallery.html">Gallery</a>
+                            <a onclick="closeNav()" href="fun-fact.html">Fun Facts</a>
+                            <a onclick="closeNav()" href="about-me.html">About Me</a>
+                            <a onclick="closeNav()" href="contact.html">Contact</a>
                         </div>
                     </div>
 
                 </div>
             </div>
         </nav>
+
     </header>
     <!--header section end-->
 
     <div class="whole">
-        <!--contact section start-->
         <section class="contact-section" id="contact" style="margin-top: 15px;">
             <div class="row">
                 <h2>get in touch</h2>
-                <p class="little-description">1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
+                <p class="little-description">1600 Pennsylvania ve, Washington, United States of America. Tel: (202) xxx-xxxx
                 </p>
             </div>
-            <div class="row">
+            <div class="row" style="margin-bottom: 3rem;">
                 <form action="#" method="POST">
                     <div class="row">
                         <div class="col span_1_of_2">
@@ -104,7 +118,6 @@
                 </form>
             </div>
         </section>
-        <!--contact section end-->
 
 
         <!--footer section start-->
@@ -114,6 +127,7 @@
             </div>
         </footer>
         <!--footer section end-->
+
     </div>
 
     <!-- JS SCRIPTS -->
