--- a/diet.html
+++ b/diet.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Cuda - An awesome single page portfolio html template</title>
+    <title>Tiger - an untold story !</title>
+    <meta name="description" content="Explore the world of tigers with fascinating facts about their behavior, habitat, and more.">
+    <meta name="keywords" content="tigers, big cats, wildlife, conservation, tiger facts">
+    <meta name="author" content="Tova D">
+
+    <!-- Open Graph Meta Tags (for social media sharing) -->
+    <meta property="og:title" content="Tiger Kingdom">
+    <meta property="og:description" content="Discover the majestic world of tigers through captivating facts and information.">
+
+    <!-- Twitter Meta Tags (for Twitter card) -->
+    <meta name="twitter:title" content="Tiger Kingdom">
+    <meta name="twitter:description" content="Explore the world of tigers with captivating facts and information.">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
@@ -44,7 +55,7 @@
                         <a href="adaptation.html">Adaptations</a>
                     </li>
                     <li class="nav-item">
-                        <a href="conservation.html">Conservation</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a href="fun-fact.html">Fun Facts</a>
@@ -67,7 +78,7 @@
                             <a onclick="closeNav()" href="behavior.html">Behavior</a>
                             <a onclick="closeNav()" href="life-cycle.html">Life cycle</a>
                             <a onclick="closeNav()" href="adaptation.html">Adaptations</a>
-                            <a onclick="closeNav()" href="conservation.html">Conservation</a>
+                            <a onclick="closeNav()" href="gallery.html">Gallery</a>
                             <a onclick="closeNav()" href="fun-fact.html">Fun Facts</a>
                             <a onclick="closeNav()" href="about-me.html">About Me</a>
                             <a onclick="closeNav()" href="contact.html">Contact</a>
@@ -81,14 +92,11 @@
     </header>
     <!--header section end-->
 
-    <!--service section start-->
     <section id="service " class="services-section js-sticky-menu">
         <h2>On the Menu: Exploring the Tiger's Carnivorous Diet</h2>
 
     </section>
-    <!--service section end-->
 
-    <!--team section start-->
     <section class="team-section " id="team">
         <div class="row  s-container">
             <div class="h-item">
@@ -103,9 +111,8 @@
 
         </div>
     </section>
-    <!--team section end-->
 
-    <!--service section start-->
+
     <section id="service " class="services-section light-blue js-sticky-menu">
         <div class="row  s-container">
             <div class="h-item">
@@ -113,14 +120,12 @@
             </div>
             <div class="h-item">
                 <p class="little-description ">Tigers inhabiting dense forests, such as the Bengal and Indochinese tigers, are adapted to stalking and ambushing prey in wooded areas. Their diet often includes spotted deer, sambar deer, and wild pigs. Tigers in these environments are
-                    known for their stealth and agility, enabling them to navigate through the vegetation to secure their meals..
+                    known for their stealth and agility, enabling them to navigate through the vegetation to secure their meals.
                 </p>
             </div>
         </div>
     </section>
-    <!--service section end-->
 
-    <!--team section start-->
     <section class="team-section " id="team">
         <div class="row  s-container">
             <div class="h-item">
@@ -136,9 +141,8 @@
 
         </div>
     </section>
-    <!--team section end-->
 
-    <!--service section start-->
+
     <section id="service " class="services-section light-blue js-sticky-menu">
         <div class="row  s-container">
             <div class="h-item">
@@ -151,7 +155,6 @@
             </div>
         </div>
     </section>
-    <!--service section end-->
     <!--footer section start-->
     <footer class="footer-section">
         <div class="row">
@@ -159,6 +162,7 @@
         </div>
     </footer>
     <!--footer section end-->
+
 
     <!-- JS SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
